objects/SFDC_Training__c.object
<CustomObject>
    <fields>
        <fullName>Sessions__c</fullName>
        <inlineHelpText>Session Timings</inlineHelpText>
        <label>Sessions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>02:00 PM</fullName>
                </value>
                <value>
                    <fullName>04:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Id__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Training Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Training_Name__c</fullName>
        <label>Training Name</label>
        <type>TextArea</type>
    </fields>
    <label>SFDC Training</label>
    <nameField>
        <label>SFDC Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDC Training</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>SFDC_Rec_Type</fullName>
        <active>true</active>
        <label>SFDC Rec Type</label>
    </recordTypes>
    <validationRules>
        <fullName>Training_Name</fullName>
        <active>true</active>
        <errorConditionFormula>BEGINS(Training_Name__c, "SIEBEL")</errorConditionFormula>
        <errorMessage>This Training is meant only for SFDC Topics</errorMessage>
    </validationRules>
</CustomObject>